fix checkbox alignment in find/replace on ubuntu

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/source/editors/text/findreplace/FindReplaceBar.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/source/editors/text/findreplace/FindReplaceBar.css
@@ -49,6 +49,9 @@
 .macintosh .checkboxLabel {
    margin-top: 5px;	
 }
+.ubuntu_mono .checkboxLabel {
+   margin-top: 5px;
+}
 .macintosh .optionsPanel {
    margin-top: 7px;
 }
